[gd_scene load_steps=3 format=3 uid="uid://chesgolorrldj"]

[ext_resource type="Script" uid="uid://dhxcdtq31qlj2" path="res://login_secret.gd" id="1_gc7vt"]
[ext_resource type="Script" uid="uid://cwhw3x7h5ewdo" path="res://signin_secret.gd" id="2_lkltc"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="login" type="Node" parent="."]
script = ExtResource("1_gc7vt")

[node name="ColorRect" type="ColorRect" parent="login"]
offset_left = 722.0
offset_top = 366.0
offset_right = 1053.0
offset_bottom = 592.0
color = Color(0.15294118, 0.20784314, 1, 1)

[node name="UsernameLabel" type="Label" parent="login"]
offset_left = 742.0
offset_top = 393.0
offset_right = 861.0
offset_bottom = 416.0
text = "Käyttäjätunnus"

[node name="UsernameLineEdit" type="LineEdit" parent="login"]
unique_name_in_owner = true
offset_left = 868.0
offset_top = 391.0
offset_right = 1043.0
offset_bottom = 422.0

[node name="PasswordLabel" type="Label" parent="login"]
offset_left = 745.0
offset_top = 444.0
offset_right = 814.0
offset_bottom = 467.0
text = "Salasana"

[node name="PasswordLineEdit" type="LineEdit" parent="login"]
unique_name_in_owner = true
offset_left = 869.0
offset_top = 442.0
offset_right = 1046.0
offset_bottom = 473.0
secret = true

[node name="LoginButton" type="Button" parent="login"]
offset_left = 840.0
offset_top = 493.0
offset_right = 960.0
offset_bottom = 547.0
text = "Kirjaudu"

[node name="LoginInfoLabel" type="Label" parent="login"]
unique_name_in_owner = true
offset_left = 745.0
offset_top = 556.0
offset_right = 1044.0
offset_bottom = 579.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="signin" type="Node" parent="."]
script = ExtResource("2_lkltc")

[node name="ColorRect" type="ColorRect" parent="signin"]
offset_left = 61.0
offset_top = 53.0
offset_right = 745.0
offset_bottom = 279.0
color = Color(0.40371275, 0.5532212, 1, 1)

[node name="FullnameLabel" type="Label" parent="signin"]
offset_left = 434.0
offset_top = 80.0
offset_right = 553.0
offset_bottom = 103.0
text = "Koko nimi"

[node name="FullnameLineEdit" type="LineEdit" parent="signin"]
unique_name_in_owner = true
offset_left = 560.0
offset_top = 78.0
offset_right = 735.0
offset_bottom = 109.0

[node name="EmailLabel" type="Label" parent="signin"]
offset_left = 437.0
offset_top = 131.0
offset_right = 506.0
offset_bottom = 154.0
text = "Email"

[node name="EmailLineEdit" type="LineEdit" parent="signin"]
unique_name_in_owner = true
offset_left = 561.0
offset_top = 129.0
offset_right = 738.0
offset_bottom = 160.0

[node name="SigninUsernameLabel" type="Label" parent="signin"]
offset_left = 86.0
offset_top = 82.0
offset_right = 205.0
offset_bottom = 105.0
text = "Käyttäjätunnus"

[node name="SigninUsernameLineEdit" type="LineEdit" parent="signin"]
unique_name_in_owner = true
offset_left = 212.0
offset_top = 80.0
offset_right = 387.0
offset_bottom = 111.0

[node name="SigninPasswordLabel" type="Label" parent="signin"]
offset_left = 89.0
offset_top = 133.0
offset_right = 158.0
offset_bottom = 156.0
text = "Salasana"

[node name="SigninPasswordLineEdit" type="LineEdit" parent="signin"]
unique_name_in_owner = true
offset_left = 213.0
offset_top = 131.0
offset_right = 390.0
offset_bottom = 162.0
secret = true

[node name="SigninButton" type="Button" parent="signin"]
offset_left = 344.0
offset_top = 182.0
offset_right = 464.0
offset_bottom = 236.0
text = "Luo tunnus"

[node name="SigninInfoLabel" type="Label" parent="signin"]
unique_name_in_owner = true
offset_left = 84.0
offset_top = 243.0
offset_right = 736.0
offset_bottom = 266.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="login/LoginButton" to="login" method="_on_login_button_pressed"]
[connection signal="pressed" from="signin/SigninButton" to="signin" method="_on_signin_button_pressed"]
